# chessGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  qml.qrc  workspace.code-workspace
.github/workflows/: build copy.yml  build.yml  msvc.yml
client/: qml.qrc
client/images/: black_square.jfif
client/qml/: Button_TB.qml  Game.qml  MainMenu.qml  Square.qml  ToggleButton.qml  fonts.qml  main.qml
client/src/: CMakeLists.txt  application.cpp  application.h  boardmodel.cpp  boardmodel.h  main.cpp  mainmenumodel.cpp  mainmenumodel.h  serverinterface.cpp  serverinterface.h
doc/: board.xlsx  class_diagram.wsd  component_diagram.wsd  sequence_select_piece.wsd
game/: CMakeLists.txt
game/src/: Board.cpp  Board.h  CMakeLists.txt  IBoard.h  bishop.cpp  bishop.h  board.cpp  board.h  boardengine.cpp  boardengine.h  boardinformation.cpp  boardinformation.h  boardpositions.cpp  boardpositions.h  boardstatus.cpp  boardstatus.h  game.cpp  game.h  iboard.h  igame.h  iplayer.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  pawn.cpp  pawn.h  piece.cpp  piece.h  pieceinfo.cpp  pieceinfo.h  piecetype.h  player.cpp  player.h  playermanager.cpp  playermanager.h  playerturn.h  position.cpp  position.h  (+6 more)
game/tst/: CMakeLists.txt  boardengine_testcases_data.h  testcases_data.cpp  testcases_data.h  tst_board.cpp  tst_boardengine.cpp  tst_boardstatus.cpp  tst_game.cpp  tst_pieces.cpp  tst_player.cpp  tst_playermanager.cpp
grpc/: interface.grpc.pb.cc  interface.grpc.pb.h  interface.pb.cc  interface.pb.h  interface.proto
interface/: CMakeLists.txt  interface.grpc.pb.cc  interface.grpc.pb.h  interface.pb.cc
lib/game/: CMakeLists.txt
lib/game/src/: Board.cpp
lib/game/tst/: CMakeLists.txt
qt/: .gitignore  CMakeLists.txt  chessGameQt.pro  qml.qrc
qt/lib/game/: CMakeLists.txt
qt/lib/game/src/: CMakeLists.txt  IBoard.h  bishop.cpp  bishop.h  game.cpp  player.cpp  player.h  position.cpp
qt/lib/game/tst/: tst_board.cpp  tst_player.cpp
qt/qml/: Menu.qml  Player.qml  Square.qml  main.qml
qt/src/: CMakeLists.txt  boardmodel.cpp  boardmodel.h  main.cpp  squaremodel.cpp  squaremodel.h
server/: CMakeLists.txt
server/src/: CMakeLists.txt  main.cpp  request.cpp  request.h
src/: Board.cpp  Board.h  CMakeLists.txt  IBoard.h  bishop.cpp  bishop.h  boardmodel.h  game.cpp  game.h  igame.h  iplayer.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  pawn.cpp  pawn.h  piece.cpp  piece.h  player.cpp  player.h  position.cpp  position.h  queen.cpp  queen.h  rook.cpp  rook.h
tst/: tst_board.cpp  tst_game.cpp  tst_pieces.cpp  tst_player.cpp
